# sailor

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  CompileShaders.bat  README.md  Sailor.sln  build_editor.py  build_engine.py  run_editor.py  run_world_tests.py  update_deps.bat  update_deps.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  technical_task.md
.github/vcpkg-triplets/: x64-windows.cmake
.github/workflows/: cmake-single-platform.yml  editor-build.yml  engine-build.yml
Butler/: butler.vcxproj  main.cpp
CMake/: SailorConfig.cmake.in
Content/: BSC5.asset  DefaultRenderer.renderer  DefaultRenderer.renderer.asset  Editor.world  Editor.world.asset  EditorRenderer.renderer  EditorRenderer.renderer.asset  ExperimentalRenderer.renderer  ExperimentalRenderer.renderer.asset  StarsColor.yaml  StarsColor.yaml.asset  Test.world  Test.world.asset
Content/Shaders/: Blit.shader  Blit.shader.asset  Bloom.shader  Bloom.shader.asset  Blur.shader  Blur.shader.asset  ChromaticAberation.shader  ChromaticAberation.shader.asset  ComputeAverageLuminance.shader  ComputeAverageLuminance.shader.asset  ComputeBloomDownscale.shader  ComputeBloomDownscale.shader.asset  ComputeBloomUpscale.shader  ComputeBloomUpscale.shader.asset  ComputeBrdfLut.shader  ComputeBrdfLut.shader.asset  ComputeDepthHighZ.shader  ComputeDepthHighZ.shader.asset  ComputeEnvMap_IBL.shader  ComputeEnvMap_IBL.shader.asset  ComputeEquirect2Cube.shader  ComputeEquirect2Cube.shader.asset  ComputeHistogram.shader  ComputeHistogram.shader.asset  ComputeIrradianceMap.shader  ComputeIrradianceMap.shader.asset  ComputeLightCulling.shader  ComputeLightCulling.shader.asset  ComputeMeshCulling.shader  ComputeMeshCulling.shader.asset  ComputeMipUpscale.shader  ComputeMipUpscale.shader.asset  ComputeTest.shader  ComputeTest.shader.asset  ComputeVolumetricFog.shader  ComputeVolumetricFog.shader.asset  Constants.glsl  Constants.glsl.asset  Debug.shader  Debug.shader.asset  (+56 more)
Content/Textures/: BRDF_Epic.png.asset  Bokeh__Lens_Dirt_9.jpg.asset  CloudsMap.png.asset  DitherPattern.png.asset  Environment.hdr.asset  Noise.png.asset  VulkanLogo.asset  VulkanLogo.png.asset
Docs/: WorkspaceLogic.md
Docs/Agents/: implementer.md  lead-qa.md  manager.md  team-lead.md  tech-lead.md  workflow.md
Editor/: .gitignore  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  SailorEditor.csproj  SailorEditor.sln  SailorEngine.cs  SceneView.xaml  SceneView.xaml.cs
Editor.Tests/: AIOperatorTests.cs  CommandContractsTests.cs  Editor.Contracts.Tests.csproj  EditorDragDropRoutingTests.cs  EditorDragDropTestStubs.cs  EditorPerfTests.cs  EditorScreenshotTestOptionsTests.cs  EditorShellHostNotificationTests.cs  EditorTypeCacheStoreTests.cs  EditorTypeCatalogContractTests.cs  EngineLaunchContractTests.cs  EngineLifecycleTests.cs  EngineSelectionInteropTests.cs  EngineTypeMetadataContractTests.cs  GlobalUsings.cs  HistoryContractsTests.cs  LayoutContractsTests.cs  LayoutOperationsTests.cs  NumericValueConverterTests.cs  PanelContractsTests.cs  ProjectContentAssetResolutionPolicyTests.cs  ProjectContentFolderIdsTests.cs  ProjectContentPathPolicyTests.cs  ProjectContentProjectionTests.cs  SceneSelectionRoutingTests.cs  SceneTestServiceStubs.cs  SceneTestShellStateStub.cs  SceneViewportLifecycleTests.cs  SettingsContractsTests.cs  ShellHostTestStubs.cs  ShellStateConsistencyTests.cs  UnifiedSettingsStoreTests.cs  Utf8InteropArgumentsTests.cs  WorkflowProjectionTests.cs  WorkspaceActivationTests.cs  WorkspaceCMakeIntegrationHarness.cs  WorkspaceGeneratedProjectStateTests.cs  WorkspaceIsolationRegressionTests.cs  WorkspaceLifecycleTests.cs  WorkspaceManifestTests.cs  (+5 more)
Editor.Tests/Visual/: RunEditorScreenshotTest.ps1
Editor/AI/: AGENT.md  AIContracts.cs  AIOperatorService.cs  EditorAIContextProvider.cs  HeuristicAIActionPlanner.cs  MarkdownAIAgentInstructionsProvider.cs
Editor/Commands/: CommandContracts.cs  EditorActionContextProvider.cs  EditorAssetCommands.cs  EditorCommandRuntime.cs  EditorShellCommands.cs  EditorWorldCommands.cs
Editor/Content/: ProjectContentAssetResolutionPolicy.cs  ProjectContentFolderIds.cs  ProjectContentModels.cs  ProjectContentPathPolicy.cs  ProjectContentStore.cs
Editor/Controls/: AssetUIDClickable.cs  AssetUIDConverter.cs  AssetUIDToFilenameConverter.cs  AssetUIDToTextureConverter.cs  EnumPickerBehavior.cs  EnumToStringConverter.cs  EnumValuesConverter.cs  FileIdClickable.cs  FileIdDragAndDropBehaviour.cs  FileIdSelectBehavior.cs  FileIdToFilenameConverter.cs  FileIdToPreviewTextureConverter.cs  FileIdToTextureConverter.cs  (+20 more)
Exec/: CMakeLists.txt  Main.cpp
Lib/: CMakeLists.txt  DllMain.cpp  InteropExports.cpp
Runtime/: Defines.h  ExportDef.h  JsonSerializable.cpp  JsonSerializable.h  LogMacros.h  Sailor.cpp  Sailor.h  Sailor.natvis  Singleton.hpp  Types.cpp  Types.h  Utils.cpp  Utils.h
Sailor/: dllmain.cpp  sailor.vcxproj  sailor.vcxproj.filters
Scripts/: create_game_project.py
Tests/: AssetCacheContractTests.cpp  AssetMountDiscoveryTests.cpp  CMakeLists.txt  EcsLifecycleContractTests.cpp  EditorViewportSessionTests.cpp  InstanceIdContractTests.cpp  MacWindowThreadingTests.mm  RemoteViewportContractTests.cpp  RemoteViewportFoundationTests.cpp  RemoteViewportMacNativeBridgeTests.mm  RemoteViewportMacTransportTests.cpp  RemoteViewportRuntimeTests.cpp  RemoteViewportWindowsTransportTests.cpp  ShaderCacheArtifactTests.cpp  SmartPointerTests.cpp  WorkspaceCacheContractTests.cpp  WorkspaceContextTests.cpp  WorkspaceModuleContractTests.cpp  WorkspaceModuleFixture.cpp  WorkspaceModuleIncompatibleFixture.cpp  WorkspaceModuleMalformedMetadataFixture.cpp  WorkspaceModuleMissingEntryFixture.cpp  WorkspaceModuleRuntimeTests.cpp  container_benchmarks_test.py  path_tracing_dll_contract_test.py  path_tracing_smoke_test.py  path_tracing_source_contract_test.py  process_no_crash_test.py  runtime_no_exceptions_test.py  runtime_no_std_containers_test.py  tasks_scheduler_test.py
(+918 files in other folders)
